# vim: set noexpandtab:

2014-02-11 Steve
	* Bugfix for muon systematics in n0150
		* Added temporary boolean argument to 
		  SusyNtAna.selectObjects: n0150BugFix
		* This flag propagates down through SusyNtTools 
		  getBaselineObjects, getPreMuons, and finally
		  Muon.setState

2014-02-10 Steve
	* Updated SusyNtTools.eventHasSusyPropagators to return
	  true as soon as a problematic sparticle is found
	* Added susySpartId1 and susySpartId2 to Event class
		* Allows us to recalculate the proc ID on the fly later

2014-02-09 Steve
	* Updated Susy3LepCutflow code
		* Updated cleaning cuts
		* More event selection methods
		* Full MC weighting, including the latest
		  prescriptions for sumw and cross section
		* Skeleton methods for histograms

2014-02-06 Steve
	* Added getBTagSFJets2Lep to SusyNtTools which returns
	  the subset of baseline jets which are tested for the b-veto.
	  These are thus the jets to be passed to the bTagSF method.

2014-02-05 Steve
	* Added MCID and proc ID to Event.print()
	* Changed from hardcoded values to JET_JVF_PT and JET_JVF_ETA in isSignalJet
	* Added template method, dumpObjects, for looping and dumping any 
	  objects with a print() method.

2014-01-29 Steve
	* Added bugfix to getCrossSection for Wh nohadtau signal samples
		* proc ID (susyFinalState) was not saved correctly
		* I will work on redesigning the approach upstream to
		  prevent similar future issues
	* Cleaned up mljj method
	* Added MCID and prod ID to Event.print()
	* Added Met.sumet to the copy constructor and assignment operator (was missing)
	* Added scripts/refreshSUSYToolsData.sh to update SUSYTools/data to trunk

2014-01-22 Steve
	* Fixed SusyNtTools getEventWeight to use 0 when proc ID -1 is found

2014-01-22 Anyes
	* Added functions for mljj 
	* Update 2LSSWh isolation cuts to tighter set (not backward compatible)

2014-01-22 Steve
	* Fixed SusyNtAna getEventWeight
		* Added useProcSumw argument. Order of args has changed,
		  so be careful!
